--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/app.css" >
-  <link rel="stylesheet" href="css/theme/default.css" id="theme">
-  <link rel="stylesheet" href="css/media.css">
+  <link rel="stylesheet" href="src/css/app.css" >
+  <link rel="stylesheet" href="src/css/theme/default.css" id="theme">
+  <link rel="stylesheet" href="src/css/media.css">
 
 
   <title>Frontend Mentor | Calculator app</title>
@@ -77,7 +77,7 @@
     Coded by <a href="#">Your Name Here</a>.
   </footer> -->
 
-  <script src="js/script.js"></script>
+  <script src="src/js/script.js"></script>
 </body>
 
 </html>
